Force text to be white in XAML template

--- a/templates/UniversalSwapChainPanel/Windows/OpenGLESPage.xaml
+++ b/templates/UniversalSwapChainPanel/Windows/OpenGLESPage.xaml
@@ -8,6 +8,6 @@
     mc:Ignorable="d">
 
   <SwapChainPanel x:Name="swapChainPanel">
-    <TextBlock Text="OpenGL ES and XAML" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" />
+    <TextBlock Text="OpenGL ES and XAML" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" />
   </SwapChainPanel>
 </Page>
